k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibo-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      project: fibonacci
      env: production
      location: EN
      component: postgres
  template:
    metadata:
      labels:
        project: fibonacci
        env: production
        location: EN
        component: postgres
    spec:
      volumes:
        - name: fibo-postgres-volume
          persistentVolumeClaim:
            claimName: fibo-postgres-persistent-volume-claim
      containers:
        - name: postgres
          image: library/postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: fibo-postgres-volume
              subPath: postgres
