k8s/backend-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    project: fibonacci
    env: production
    location: EN
    component: backend
  ports:
    - port: 5000
      targetPort: 5000
