k8s/postgres-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    project: fibonacci
    env: production
    location: EN
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
